# LABYRINTH-LEGENDS

./: .gitignore  GAME_IMPROVEMENTS.md  GUIDELINE.md  README.md  SUMMARY.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  package.json  pnpm-lock.yaml  render.yaml
backend/data/: database.json
backend/src/: index.ts  types.ts
backend/src/config/: gameConfig.ts
backend/src/db/: memory.ts
backend/src/services/: linera.ts
contracts/labyrinth_tournament/: Cargo.toml
contracts/labyrinth_tournament/src/: contract.rs  lib.rs  service.rs  state.rs
frontend/: .env.example  index.html  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/public/astray/: index.html  index.old.html  maze.js
frontend/public/js/: dynamic-iframe-shim.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: DivisionBadge.tsx  Layout.tsx  StreakDisplay.tsx  XpBreakdownDisplay.tsx
frontend/src/config/: gameConfig.ts
frontend/src/hooks/: index.ts  useLabyrinth.ts  useLineraConnection.ts
frontend/src/lib/: api.ts  labyrinthApi.ts  wallet.ts
frontend/src/pages/: AstrayPlayPage.tsx  HomePage.tsx  LeaderboardPage.tsx  NotFoundPage.tsx  PlayPage.tsx  ProfilePage.tsx  StatsPage.tsx  TournamentDetailPage.tsx  TournamentsPage.tsx
frontend/src/stores/: gameStore.ts  socketStore.ts
frontend/src/types/: index.ts
game-engine/: index.js  package.json
game-engine/src/: controls.js  game.js  hooks.js  maze.js  physics.js  renderer.js
scripts/: deploy-contract.sh  dev.sh  setup.sh  test-linera.sh
(+7 files in other folders)
