[package]
name = "labyrinth_tournament"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.15.8"
async-graphql = "=7.0.17"
async-graphql-value = "=7.0.17"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
linera-sdk = { version = "0.15.8", features = ["test"] }

[[bin]]
name = "labyrinth_tournament_contract"
path = "src/contract.rs"

[[bin]]
name = "labyrinth_tournament_service"
path = "src/service.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
